add - select + options

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-    
-  <script src="./js/app.js"></script>  
+    <select name="age" id="age">
+        <option value="0">meno di 18</option>
+        <option value="1">tra 18 e 65 anni</option>
+        <option value="2">più di 65 anni</option>
+    </select>
+
+    <script src="./js/app.js"></script>  
 </body>
 </html>
