--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
+    <input type="text" name="km" id="distance" placeholder="km da percorrere">
     <select name="age" id="age">
         <option value="0">meno di 18</option>
         <option value="1">tra 18 e 65 anni</option>
         <option value="2">più di 65 anni</option>
     </select>
+    <button id="price-calc">Procedi</button>
+    <span id="ticket-price"></span>
 
     <script src="./js/app.js"></script>  
 </body>
